# wingpanel-indicator-services

./: CMakeLists.txt  Constants.vala.cmake  config.vala.cmake
schemas/: CMakeLists.txt  com.github.talyssonoc.wingpanel-indicator-services.gschema.xml
src/: CMakeLists.txt  Indicator.vala  Main.vala
src/Common/: Constants.vala.cmake  Settings.vala
src/Infra/: ServiceMapper.vala  ServiceRepository.vala  Settings.vala
src/Model/: Service.vala  ServiceRepository.vala  ServiceValidation.vala
src/Services/: Service.vala  ServiceDescriptor.vala  ServicesLoader.vala  Settings.vala
src/UI/: Indicator.vala
src/UI/Preferences/: PreferencesView.vala  ServiceListView.vala  ServiceView.vala
src/UI/Service/: ServiceListView.vala  ServiceView.vala
src/UI/Widgets/: OverlayWidget.vala  PopoverWidget.vala
src/Widgets/: OverlayWidget.vala  PopoverWidget.vala  ServiceWidget.vala
